--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,14 @@
 html {
     font-family: 'Montserrat', sans-serif;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+*{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
